# checkthechain

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE-MIT  README.md  pyproject.toml  setup.py
default_data/: data_root.json
default_data/mainnet/addresses/: balancer.csv
default_data/mainnet/oracle_feeds/: chainlink.csv
deploy/docker/: Dockerfile  Dockerfile.dockerignore  build_docker_image  build_docker_images  docker_build.sh  docker_run.sh
docs/: README.md  code_tour.md  config.md  install.md
docs/cli/: README.md  export.md  fei.md
docs/cli/protocols/: 4byte.md
docs/contributing_guides/: adding_config_keys.md  adding_db_caches.md  upgrade_to_new_ctc_version.md
docs/examples/: README.md  abi_examples.md
scripts/: ctc  ctc_aliases.sh  ctc_cd_snippet.sh  ctc_py
scripts/scrape/: scrape_blocks.py  scrape_chainlink.py  scrape_etl.py  scrape_fei.py
scripts/sync/: sync_data_to_backup_dir.py  sync_data_to_s3.py
src/ctc/: __init__.py  __main__.py  config_utils.py
src/ctc/binary/: __init__.py  abi_utils.py  format_utils.py  formats.py  hash_utils.py  hashes.py  rlp_coding.py  rlp_utils.py
src/ctc/binary/abis/: __init__.py  abi_coding.py  block_coding.py  contract_parsing.py  event_coding.py  event_parsing.py  function_coding.py  function_parsing.py
src/ctc/binary/signature_utils/: __init__.py  eip712_utils.py  key_utils.py  signature_creation.py  signature_recovery.py  vrs_utils.py
src/ctc/binary/signatures/: __init__.py  eip712_utils.py  key_crud.py  key_utils.py  secp256k1_utils.py  signature_creation.py  signature_recovery.py  transaction_signatures.py  vrs_utils.py
src/ctc/cli/: __init__.py  cli_run.py  cli_utils.py  ctc_cli.py  root_command.py
src/ctc/cli/cli_utils/: __init__.py  cli_alias_utils.py  cli_charset_utils.py  cli_color_utils.py  cli_execution_utils.py  cli_output_utils.py  cli_parse_utils.py
src/ctc/cli/commands/: add_proxy_abi_command.py  address_command.py  block_command.py  call_command.py  cd_command.py  config_command.py  export_command.py  gas_command.py  keccak_command.py  rechunk_command.py  root_command.py  token_command.py  transaction_command.py
src/ctc/cli/plugins/: toolsql_plugin.py
src/ctc/config/: __init__.py  config_context.py  config_data.py  config_data_sources.py  config_defaults.py  config_env_vars.py  config_overrides.py  config_read.py  config_spec.py  config_upgrade.py  config_utils.py  config_validate.py  config_values.py  config_write.py  data_source_utils.py  setup_utils.py
src/ctc/config/config_data/: __init__.py  data_root_utils.py  data_source_utils.py
src/ctc/config/context_utils/: __init__.py  context_caches.py  context_crud.py  context_sources.py  context_validate.py
src/ctc/config/setup_utils/: __init__.py  config_path_setup.py  data_dir_management.py  data_dir_upgrades.py  data_dir_versioning.py  data_root_setup.py  db_data_setup.py  db_setup.py  final_setup.py  main_setup.py  network_setup.py  setup_io.py  validation_setup.py
src/ctc/config/upgrade_utils/: __init__.py  config_upgrade.py  data_dir_versioning.py  legacy_types.py  version_utils.py
src/ctc/datasets/: extract_blocks_and_transactions.py  extract_create_traces.py  extract_erc20_transfers.py  extract_native_transfers.py
src/ctc/db/: README.md  __init__.py  connect_utils.py  db_connect.py  db_spec.py  dba_utils.py  intake_utils.py  query_utils.py  reorg_utils.py  schema_utils.py
src/ctc/db/compression/: block_timestamp_compression.py
src/ctc/db/db_crud/: __init__.py  block_timestamp_crud.py  blocks_crud.py  contract_abi_crud.py  contract_creation_block_crud.py  contract_creation_crud.py  erc20_metadata_crud.py  multischema_crud.py
src/ctc/db/db_intake/: __init__.py  block_intake.py  block_timestamps_intake.py  contract_intake.py  intake_utils.py
src/ctc/db/db_management/: __init__.py  active_utils.py  dba_utils.py  reorg_utils.py
src/ctc/default_data/: networks.csv
src/ctc/defi/: cex_utils.py
src/ctc/directory/: __init__.py  addresses.py  balancer_directory.py  cex_directory.py  chainlink_directory.py  contract_directory.py  curve_directory.py  erc20s.py  eth_directory.py  fei_directory.py  frax_directory.py  networks.py  oracles.py  pickle_directory.py  rari_directory.py  saddle_directory.py  sushi_directory.py  uniswap_directory.py
src/ctc/directory_new/: __init__.py  addresses.py  contract_addresses.py  erc20s.py  networks.py  oracles.py  tokens.py
src/ctc/evm/: __init__.py  evm_spec.py
src/ctc/rpc/: __init__.py  rpc_format.py  rpc_lifecycle.py  rpc_logging.py  rpc_provider.py  rpc_registry.py  rpc_request.py  rpc_spec.py
src/ctc/spec/: __init__.py  abi.py  binary.py  block_spec.py  block_typeguards.py  formatting.py  rpc.py  token.py  typedata.py
src/ctc/toolbox/: async_utils.py  asyncio_utils.py  chunk_utils.py  nested_utils.py  optimize_utils.py  pandas_utils.py  plot_utils.py  range_utils.py  search_utils.py  validate_utils.py
tests/: conftest.py  run_type_checks.sh
tests/benchmark/: state_snapshots.py
tests/ctc/: test_code.py  test_config.py
tests/ctc/binary/: test_eip712.py  test_format_utils.py  test_hash_utils.py  test_rlp_encoding.py  test_signatures.py
tests/ctc/cli/: test_cli_args.py  test_cli_subcommands.py
tests/ctc/config/: test_config_defaults.py  test_config_validators.py  test_overrides.py  test_setup.py
tests/ctc/db/: db_schemas.py  dba_utils.py  test_crud_problems.py
tests/ctc/directory/: test_directory_networks.py  test_directory_oracles.py  test_directory_tokens.py
tests/ctc/docs/: test_readme_examples.py
tests/ctc/evm/: test_address_utils.py  test_block_utils.py  test_eth_utils.py  test_event_utils.py  test_event_utils_new.py  test_transaction_utils.py
tests/ctc/protocols/: test_balancer_utils.py
tests/ctc/spec/: test_typedata.py  test_typedefs.py
tests/ctc/toolbox/: test_amm_utils.py  test_chunk_utils.py  test_feed_utils.py  test_range_utils.py
tests/export/: test_data_export.py
tests/protocols/test_uniswap_utils/: test_uniswap_queries.py
tests/uniswap/: test_uniswap_trades.py
tests/votes/: test_vote_infrastructure.py
(+1014 files in other folders)
